Fix layout on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,6 +33,7 @@ body {
   background-color: black;
   background-image: url("/img/black-grid-background.png");
   background-size: 48px;
+  height: 100vh;
 }
 
 .background-overlay {
@@ -73,7 +74,6 @@ body {
 .header--container {
   display: grid;
   width: 100%;
-  height: 140px;
   background: url("/img/purplediamond-gradient.png");
 }
 
@@ -93,7 +93,6 @@ body {
   image-rendering: pixelated;
   width: 100%;
   max-width: 720px;
-  height: 140px;
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: contain;
@@ -110,7 +109,7 @@ body {
   background-image: url("/img/sonic-electric-arc-1.png");
   image-rendering: pixelated;
   width: 60px;
-  height: 140px;
+  min-height: 140px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -120,7 +119,7 @@ body {
 
 .header__content {
   padding: 1rem 1rem 2rem 2rem;
-  height: 140px;
+  min-height: 140px;
   display: flex;
   align-items: center;
   border-bottom: 4px solid var(--header-border);
@@ -163,7 +162,7 @@ body {
   line-height: 1.5;
   font-weight: bold;
   font-style: italic;
-  padding-left: 1rem;
+  padding: 0 1rem;
   color: var(--title-text);
 }
 
@@ -225,7 +224,7 @@ body {
   text-align: center;
 }
 
-/* Mobile Layout */
+/* 1 Column Layout */
 @media only screen and (max-width: 960px) {
   .page {
     gap: 0;
@@ -253,6 +252,10 @@ body {
     border: none;
     padding-left: 0.5rem;
   }
+
+  .main--content {
+    min-width: 360px;
+  }
 }
 
 /* Format headers */
@@ -264,21 +267,52 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.75em;
 }
 
-/* Reduce header size on mobile */
-@media only screen and (max-width: 720px) {
+h3 {
+  font-size: 1.25em;
+}
+
+/* Mobile Layout */
+@media only screen and (max-width: 600px) {
+  .header__content {
+    justify-content: center;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    min-height: 80px;
+  }
+
   .header__content h1 {
-    font-size: 3em;
+    font-size: 2.2em;
+    line-height: 1;
+  }
+
+  .header__lightning--image {
+    display: none;
+  }
+
+  .region--title {
+    padding-left: 0 0.5rem;
+  }
+
+  :root {
+    font-size: 1rem;
+  }
+
+  .body {
+    font-size: 1rem;
   }
 
   h1 {
-    font-size: 1.5em;
+    font-size: 2em;
   }
 
   h2 {
-    font-size: 1.25em;
+    font-size: 1.5em;
+  }
+
+  h3 {
+    font-size: 1.2em;
   }
 }
 
